--- a/src/my_point_cloud_preprocessor/CMakeLists.txt
+++ b/src/my_point_cloud_preprocessor/CMakeLists.txt
@@ -3,6 +3,7 @@ project(my_pointcloud_preprocessor)
 set(CMAKE_CXX_STANDARD 17)
 add_compile_options(-Wall -Wextra -Wpedantic )
 
+# set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_BUILD_TYPE "Debug")
 
 # Find dependencies
